# Soundboard-App

./: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.css  App.tsx  Overlay.css  Overlay.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  updater.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: focus.rs
src/components/: Category.tsx  Checkbox.tsx  ConfigModal.tsx  ConfirmDialog.tsx  IconSelector.tsx  Modal.tsx  Navbar.tsx  OldInstantModal.tsx  OverlayWheel.tsx  PlaceholderCategory.tsx  Player.tsx  ProgressBar.tsx  SelectMenu.tsx  SettingsModal.tsx  Spinner.tsx  UploadModal.tsx  theme-provider.tsx
src/components/contextMenus/: CategoryContextMenu.tsx  HomeContextMenu.tsx  SoundContextMenu.tsx
src/components/contexts/: AppContext.tsx  ConfirmContext.tsx
src/components/modals/: Button.tsx  ConfigModal.tsx  EditCategoryModal.tsx  EditSoundModal.tsx  GenerateCodeModal.tsx  MigrationModal.tsx  Modal.tsx  MyInstantModal.tsx  NewCategoryModal.tsx  SearchBarModal.tsx  SettingsModal.tsx  SmallModal.tsx  UploadModal.tsx
src/components/shad_modals/: GenerateCodeModal.tsx  ImageViewerModal.tsx  Modal.tsx  MyInstantModal.tsx  SearchBarModal.tsx  SettingsModal.tsx  UploadModal.tsx
src/components/ui/: card.tsx  command.tsx
src/contexts/: AppContext.tsx  ConfirmContext.tsx
src/hooks/: useAudioPlayer.ts  useAuth.ts  useAuthStore.ts  useCategories.ts  useConfig.ts  useLog.ts  useModal.ts  useModals.ts  useOverlayStore.ts  useSystemTheme.ts  useWebsocket.ts
src/pages/: Discover.tsx  Home.tsx  Landing.tsx  Test.tsx  Trending.tsx  WorkInProgress.tsx
src/pages/settings/: Audio.tsx  Codes.tsx  Keybinds.tsx  MyAccount.tsx  Overlay.tsx
src/utils/: constants.ts  coordinates.ts  downloadMyInstantSound.ts  fetchMyInstantSound.ts  fetchMyInstantSounds.ts  findChangedProperties.ts  logging.ts  migrationHelpers.ts  monitors.ts  readConfig.ts
